--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>在线HTML 教学小工具</title>
+    <title>海底食碗米</title>
     <style>  
       body {
         margin: 0;
